--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Past and Present</h2>
+									<p>I worked in bank as an Assistant Manager, where I applied my interpersonal and multi-tasking skills as I managed branch operations. I realized that there are low-efficient tasks that can be improved through Data Science (innovative technology). To start, I’ve taken a Data Science Bootcamp and I’m currently self-studying. I hope to enhance my knowledge in the field to have a job and interact with like-minded women in the industry. I will use my learnings to improve my portfolio and help businesses make data-driven decisions. I also hope to apply them in my own business someday.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -60,8 +60,8 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Future</h2>
+									<p>Due to COVID-19, banks were affected as people replace branch visits with digital services, and that’s how I discovered my interest in innovative technology through Data Science. I wanted to use my skills to improve how banks or other businesses operate for the benefit of the company, its clients, and employees. My goal is to upskill to have a job in the tech industry and make a positive impact.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
