--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Who am I</a></li>
 							<li><a href="#two">What I do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
