--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Contact</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Feel free to contact me and let's create an interesting data science project:</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
@@ -142,11 +142,11 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="mailto:janlouiselamadrid@gmail.com">janlouiselamadrid@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>+639081646625</span>
 										</li>
 										<li>
 											<h3>Social</h3>
