--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							<p>Feel free to contact me and let's create an interesting data science project:</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+									<form method="post" action="mailto:janlouiselamadrid@gmail.com">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
