--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><input type="submit" value="Send"></li>
 										</ul>
 									</form>
 								</section>
