--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hi!</h1>
-							<p>I am Jan Louise and welcome to my website.</p>
+							<p>I am Jan Louise and welcome to my data science portfolio.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -49,7 +49,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Past and Present</h2>
-									<p>I worked in bank as an Assistant Manager, where I applied my interpersonal and multi-tasking skills as I managed branch operations. I realized that there are low-efficient tasks that can be improved through Data Science (innovative technology). To start, I’ve taken a Data Science Bootcamp and I’m currently self-studying. I hope to enhance my knowledge in the field to have a job and interact with like-minded women in the industry. I will use my learnings to improve my portfolio and help businesses make data-driven decisions. I also hope to apply them in my own business someday.</p>
+									<p>I worked in bank as an Assistant Manager, where I applied my interpersonal and multi-tasking skills as I managed branch operations. I realized that there are low-efficient tasks that can be improved through Data Science (innovative technology). To start, I’ve taken a Data Science Bootcamp and I’m currently self-studying. I hope to enhance my knowledge in the field to have a job and interact with like-minded individuals in the industry. I will use my learnings to improve my portfolio and help businesses make data-driven decisions. I also hope to apply them in my own business someday.</p>
 								</div>
 							</div>
 						</section>
