--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What I do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Projects below were done during my bootcamp.</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="fa-solid fa-paw-simple"></span>
+									<h3 href="https://colab.research.google.com/drive/1_QFxp-jxf8wnwlXxsf-1lEpIQ4fHi9Rx?usp=sharing" target="_blank">CAT AND DOG IMAGE CLASSIFIER</h3>
+									<p>Used TensorFlow 2.0 and Keras to create a Convolutional Neural Network that correctly classifies images of cats and dogs with 76% accuracy.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
