--- a/index.html
+++ b/index.html
@@ -71,14 +71,15 @@
 							<p>Projects below were done during my bootcamp.</p>
 							<div class="features">
 								<section>
-									<span class="fa-solid fa-paw-simple"></span>
-									<h3 href="https://colab.research.google.com/drive/1_QFxp-jxf8wnwlXxsf-1lEpIQ4fHi9Rx?usp=sharing" target="_blank">CAT AND DOG IMAGE CLASSIFIER</h3>
+									<span class="fa-solid fa-paw"></span>
+									<h3><a href="https://colab.research.google.com/drive/1_QFxp-jxf8wnwlXxsf-1lEpIQ4fHi9Rx?usp=sharing" target="_blank">CAT AND DOG IMAGE CLASSIFIER</a></h3>
 									<p>Used TensorFlow 2.0 and Keras to create a Convolutional Neural Network that correctly classifies images of cats and dogs with 76% accuracy.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="fa-solid fa-book"></span>
+									<h3><a href="https://colab.research.google.com/drive/15UidUGU2qySkJ8TEdk07aRwTnR7gp-G2?usp=sharing" target="_blank">BOOK RECOMMENDATION ENGINE</a></h3>
+									<p>This is a book recommendation algorithm using K-Nearest Neighbors.</p>
+									<p>I imported and cleaned the <a href="http://www2.informatik.uni-freiburg.de/~cziegler/BX/" target="_blank">Book-Crossings Dataset</a> which contains 1.1 million ratings (scale of 1-10) of 270,000 books by 90,000 users.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
