--- a/index.html
+++ b/index.html
@@ -83,17 +83,20 @@
 									<p>I imported and cleaned the <a href="http://www2.informatik.uni-freiburg.de/~cziegler/BX/" target="_blank">Book-Crossings Dataset</a> which contains 1.1 million ratings (scale of 1-10) of 270,000 books by 90,000 users.</p>
 								</section>
 								<section>
-									<i class="fa-solid fa-chart-line"></i>
+									<span class="icon solid major fa-chart-line"></span>
 									<h3><a href="https://colab.research.google.com/drive/1eCGGwIt3T9ZzgA0OJS9m-CS0B-9FiW31?usp=sharing" target="_blank">LINEAR REGRESSION HEALTH COSTS CALCULATOR</a></h3>
 									<p>The model uses a regression algorithm to predict healthcare costs with a Mean Absolute Error of under 3500. This means it predicts health care costs correctly within $3500. The final cell also predicts the expenses using the test dataset with the results below:</p>
-									<img src="images/pic07.png" alt="" data-position="center center" />
+									<div class="autofit">
+										<img src="images/pic07.png" alt="" data-position="center center" />
+									</div>
 								</section>
 								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon solid major fa-diagram-project"></span>
+									<h3><a>NEURAL NETWORK SMS TEXT CLASSIFIER</a></h3>
+									<p>This is a machine learning model that classifies SMS messages as either “ham” or “spam”. A "ham" message is a normal message sent by a friend. A "spam" message is an advertisement or a message sent by a company.</p>
+									<p>The challenge was achieved with 97% accuracy to predict a taken message is "ham" or "spam".</p>
 								</section>
-								<section>
+								<!-- <section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Urna quis bibendum</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
@@ -102,7 +105,7 @@
 									<span class="icon major fa-gem"></span>
 									<h3>Aliquam urna dapibus</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
+								</section> -->
 							</div>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
