--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 							<p>Projects below were done during my bootcamp.</p>
 							<div class="features">
 								<section>
-									<i class="fa-solid fa-paw"></i>
+									<span class="icon solid major fa-paw"></span>
 									<h3><a href="https://colab.research.google.com/drive/1_QFxp-jxf8wnwlXxsf-1lEpIQ4fHi9Rx?usp=sharing" target="_blank">CAT AND DOG IMAGE CLASSIFIER</a></h3>
 									<p>Used TensorFlow 2.0 and Keras to create a Convolutional Neural Network that correctly classifies images of cats and dogs with 76% accuracy.</p>
 								</section>
 								<section>
-									<i class="fa-solid fa-book"></i>
+									<span class="icon solid major fa-book"></span>
 									<h3><a href="https://colab.research.google.com/drive/15UidUGU2qySkJ8TEdk07aRwTnR7gp-G2?usp=sharing" target="_blank">BOOK RECOMMENDATION ENGINE</a></h3>
 									<p>This is a book recommendation algorithm using K-Nearest Neighbors.</p>
 									<p>I imported and cleaned the <a href="http://www2.informatik.uni-freiburg.de/~cziegler/BX/" target="_blank">Book-Crossings Dataset</a> which contains 1.1 million ratings (scale of 1-10) of 270,000 books by 90,000 users.</p>
@@ -87,7 +87,7 @@
 									<h3><a href="https://colab.research.google.com/drive/1eCGGwIt3T9ZzgA0OJS9m-CS0B-9FiW31?usp=sharing" target="_blank">LINEAR REGRESSION HEALTH COSTS CALCULATOR</a></h3>
 									<p>The model uses a regression algorithm to predict healthcare costs with a Mean Absolute Error of under 3500. This means it predicts health care costs correctly within $3500. The final cell also predicts the expenses using the test dataset with the results below:</p>
 									<div class="autofit">
-										<img src="images/pic07.png" alt="" data-position="center center" />
+										<img src="images/pic07.png" alt=""/>
 									</div>
 								</section>
 								<section>
