--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<span class="icon solid major fa-chart-line"></span>
 									<h3><a href="https://colab.research.google.com/drive/1eCGGwIt3T9ZzgA0OJS9m-CS0B-9FiW31?usp=sharing" target="_blank">LINEAR REGRESSION HEALTH COSTS CALCULATOR</a></h3>
 									<p>The model uses a regression algorithm to predict healthcare costs with a Mean Absolute Error of under 3500. This means it predicts health care costs correctly within $3500. The final cell also predicts the expenses using the test dataset with the results below:</p>
-									<img style='height: 100%; width: 100%; object-fit: contain' src="images/pic07.png" alt=""/>
+									<img style='height: 100%; width: 100%;' src="images/pic07.png" alt=""/>
 								</section>
 								<section>
 									<span class="icon solid major fa-diagram-project"></span>
