--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Past and Present</h2>
-									<p>I worked in bank as an Assistant Manager, where I applied my interpersonal and multi-tasking skills as I managed branch operations. I realized that there are low-efficient tasks that can be improved through Data Science (innovative technology). To start, I’ve taken a Data Science Bootcamp and I’m currently self-studying. I hope to enhance my knowledge in the field to have a job and interact with like-minded individuals in the industry. I will use my learnings to improve my portfolio and help businesses make data-driven decisions. I also hope to apply them in my own business someday.</p>
+									<p>I worked at a bank as an Assistant Manager, where I applied my interpersonal and multi-tasking skills as I managed branch operations. I realized that there are low-efficient tasks that can be improved through Data Science (innovative technology). To start, I’ve taken a Data Science Bootcamp and I’m currently self-studying.</p>
 								</div>
 							</div>
 						</section>
