--- a/index.html
+++ b/index.html
@@ -73,24 +73,24 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-paw"></span>
-									<h3><a href="https://colab.research.google.com/drive/1_QFxp-jxf8wnwlXxsf-1lEpIQ4fHi9Rx?usp=sharing" target="_blank">CAT AND DOG IMAGE CLASSIFIER</a></h3>
+									<h3><a href="notebook/cat_dog_img_classifier.html" target="_blank">CAT AND DOG IMAGE CLASSIFIER</a></h3>
 									<p>Used TensorFlow 2.0 and Keras to create a Convolutional Neural Network that correctly classifies images of cats and dogs with 76% accuracy.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-book"></span>
-									<h3><a href="https://colab.research.google.com/drive/15UidUGU2qySkJ8TEdk07aRwTnR7gp-G2?usp=sharing" target="_blank">BOOK RECOMMENDATION ENGINE</a></h3>
+									<h3><a href="notebook/book_recommendation_knn.html" target="_blank">BOOK RECOMMENDATION ENGINE</a></h3>
 									<p>This is a book recommendation algorithm using K-Nearest Neighbors.</p>
 									<p>I imported and cleaned the <a href="http://www2.informatik.uni-freiburg.de/~cziegler/BX/" target="_blank">Book-Crossings Dataset</a> which contains 1.1 million ratings (scale of 1-10) of 270,000 books by 90,000 users.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-chart-line"></span>
-									<h3><a href="https://colab.research.google.com/drive/1eCGGwIt3T9ZzgA0OJS9m-CS0B-9FiW31?usp=sharing" target="_blank">LINEAR REGRESSION HEALTH COSTS CALCULATOR</a></h3>
+									<h3><a href="notebook/predict_health_costs_with_regression.html" target="_blank">LINEAR REGRESSION HEALTH COSTS CALCULATOR</a></h3>
 									<p>The model uses a regression algorithm to predict healthcare costs with a Mean Absolute Error of under 3500. This means it predicts health care costs correctly within $3500. The final cell also predicts the expenses using the test dataset with the results below:</p>
 									<img style='height: 100%; width: 100%; height: auto;' src="images/pic07.png" alt=""/>
 								</section>
 								<section>
 									<span class="icon solid major fa-diagram-project"></span>
-									<h3><a>NEURAL NETWORK SMS TEXT CLASSIFIER</a></h3>
+									<h3><a href="notebook/sms_text_classification.html" target="_blank">NEURAL NETWORK SMS TEXT CLASSIFIER</a></h3>
 									<p>This is a machine learning model that classifies SMS messages as either “ham” or “spam”. A "ham" message is a normal message sent by a friend. A "spam" message is an advertisement or a message sent by a company.</p>
 									<p>The challenge was achieved with 97% accuracy to predict a taken message is "ham" or "spam".</p>
 								</section>
