--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
 								<section>
 									<span class="icon solid major fa-diagram-project"></span>
 									<h3><a href="notebook/sms_text_classification.html" target="_blank">NEURAL NETWORK SMS TEXT CLASSIFIER</a></h3>
-									<p>This is a machine learning model that classifies SMS messages as either “ham” or “spam”. A "ham" message is a normal message sent by a friend. A "spam" message is an advertisement or a message sent by a company.</p>
-									<p>The challenge was achieved with 97% accuracy to predict a taken message is "ham" or "spam".</p>
+									<p>This is a machine learning model that predicts SMS messages as either “ham” or “spam” with 97% accuracy. A "ham" message is a normal message sent by a friend. A "spam" message is an advertisement or a message sent by a company.</p>
 								</section>
 								<!-- <section>
 									<span class="icon solid major fa-link"></span>
