--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Future</h2>
-									<p>Due to COVID-19, banks were affected as people replace branch visits with digital services, and that’s how I discovered my interest in innovative technology through Data Science. I wanted to use my skills to improve how banks or other businesses operate for the benefit of the company, its clients, and employees. My goal is to upskill to have a job in the tech industry and make a positive impact.</p>
+									<p>Due to COVID-19, banks were affected as people replace branch visits with digital services, and that’s how I discovered my interest in innovative technology through Data Science. I want to use my skills to improve how banks or other businesses operate for the benefit of the company, its clients, and employees. My goal is to upskill to have a job in the tech industry and make a positive impact.</p>
 								</div>
 							</div>
 						</section>
