--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>Taguig City, Philippines</span>
+											<span>Earth</span>
 										</li>
-										<li>
+										<!-- <li>
 											<h3>Email</h3>
 											<a href="mailto:janlouiselamadrid@gmail.com">janlouiselamadrid@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
 											<span>+639081646625</span>
-										</li>
+										</li> -->
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
